--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>МосПутеводитель</title>
-  <link href="/css/bootstrap/bootstrap.css" rel="stylesheet">
-  <link href="/css/style.css" rel="stylesheet">
+  <link href="/Ule/css/bootstrap/bootstrap.css" rel="stylesheet">
+  <link href="/Ule/css/style.css" rel="stylesheet">
   <link rel="icon" href="img/logo-high.png">
 </head>
 <body>
