--- a/account.html
+++ b/account.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Личный кабинет</title>
-  <link href="/css/bootstrap/bootstrap.css" rel="stylesheet">
-  <link href="/css/style.css" rel="stylesheet">
+  <link href="/Ule/css/bootstrap/bootstrap.css" rel="stylesheet">
+  <link href="/Ule/css/style.css" rel="stylesheet">
   <link rel="icon" href="img/logo-high.png">
 </head>
 <body>
@@ -177,10 +177,10 @@
   </ul>
 </footer>
 
-<script src="/js/order/orderDelete.js"></script>
-<script src="/js/order/orderInfo.js"></script>
-<script src="/js/order/orderUpdate.js"></script>
-<script src="/js/table/ordersTable.js"></script>
-<script src="/js/bootstrap/bootstrap.bundle.js"></script>
+<script src="/Ule/js/order/orderDelete.js"></script>
+<script src="/Ule/js/order/orderInfo.js"></script>
+<script src="/Ule/js/order/orderUpdate.js"></script>
+<script src="/Ule/js/table/ordersTable.js"></script>
+<script src="/Ule/js/bootstrap/bootstrap.bundle.js"></script>
 </body>
 </html>
