--- a/index.html
+++ b/index.html
@@ -223,9 +223,9 @@
   </ul>
 </footer>
 
-<script src="/js/order/orderRegistration.js"></script>
-<script src="/js/table/guidesTable.js"></script>
-<script src="/js/table/routesTable.js"></script>
-<script src="/js/bootstrap/bootstrap.bundle.js"></script>
+<script src="/Ule/js/order/orderRegistration.js"></script>
+<script src="/Ule/js/table/guidesTable.js"></script>
+<script src="/Ule/js/table/routesTable.js"></script>
+<script src="/Ule/js/bootstrap/bootstrap.bundle.js"></script>
 </body>
 </html>
